--- a/client/main.html
+++ b/client/main.html
@@ -42,27 +42,30 @@
 </template>
 
 <template name="profile">
+  {{#each profiles}}
   <div class="col-md-6">
     <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
       <div class="col p-4 d-flex flex-column position-static">
         <strong class="d-inline-block mb-2 text-primary">World</strong>
-        <h3 class="mb-0">Featured post</h3>
+        <h3 class="mb-0">{{fname}}</h3>
         <div class="mb-1 text-muted">Nov 12</div>
         <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
           content.</p>
         <a href="#" class="stretched-link">Continue reading</a>
       </div>
       <div class="col-auto d-none d-lg-block">
-        <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img"
+        <img src="{{picPath}}" alt="">
+        <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img"
           aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Placeholder</title>
           <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
             dy=".3em">Thumbnail</text>
-        </svg>
+        </svg> -->
 
       </div>
     </div>
   </div>
+  {{/each}}
 </template>
 
 <template name="addProf">
@@ -76,13 +79,13 @@
         <div class="modal-body">
           <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon1">Profile Picture</span>
-            <input type="text" class="form-control" placeholder="Paste profile picture URL" aria-label="image"
-              aria-describedby="basic-addon1">
+            <input id="profPic" type="text" class="form-control" placeholder="Paste profile picture URL"
+              aria-label="image" aria-describedby="basic-addon1">
           </div>
           <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon2">First Name</span>
-            <input type="text" class="form-control" placeholder="Please enter the first name" aria-label="first name"
-              aria-describedby="basic-addon2">
+            <input id="first" type="text" class="form-control" placeholder="Please enter the first name"
+              aria-label="first name" aria-describedby="basic-addon2">
           </div>
           <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon3">Last Name</span>
@@ -97,7 +100,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary js-saveProfile">Add Profile</button>
         </div>
       </div>
     </div>
