Add form UI updates

--- a/client/main.html
+++ b/client/main.html
@@ -37,13 +37,16 @@
 </template>
 
 <template name="main">
-  {{> profile}}
+  <div class="row">
+    {{> profile}}
+  </div>
+
   {{> addProf}}
 </template>
 
 <template name="profile">
   {{#each profiles}}
-  <div class="col-md-6">
+  <div class="col-md-4">
     <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
       <div class="col p-4 d-flex flex-column position-static">
         <strong class="d-inline-block mb-2 text-primary">World</strong>
@@ -53,8 +56,8 @@
           content.</p>
         <a href="#" class="stretched-link">Continue reading</a>
       </div>
-      <div class="col-auto d-none d-lg-block">
-        <img src="{{picPath}}" alt="">
+      <div class="col-auto d-none d-lg-block profHeight">
+        <img class="w-100" src="{{picPath}}" alt="">
         <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img"
           aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Placeholder</title>
@@ -78,6 +81,9 @@
         </div>
         <div class="modal-body">
           <div class="input-group mb-3">
+            <img class="w-50" id="displayPic" src="unisex-avatar.png" alt="">
+          </div>
+          <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon1">Profile Picture</span>
             <input id="profPic" type="text" class="form-control" placeholder="Paste profile picture URL"
               aria-label="image" aria-describedby="basic-addon1">
@@ -96,6 +102,23 @@
             <span class="input-group-text" id="basic-addon4">Age</span>
             <input type="number" min="1" class="form-control" placeholder="Please enter the age" aria-label="last name"
               aria-describedby="basic-addon4">
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon5">Sex</span>
+            <div class="addFormBorder">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="female">
+                <label class="form-check-label" for="flexRadioDefault1">
+                  Female
+                </label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="male" checked>
+                <label class="form-check-label" for="flexRadioDefault2">
+                  Male
+                </label>
+              </div>
+            </div>
           </div>
         </div>
         <div class="modal-footer">
