Confirm Delete & Refactor code

--- a/client/main.html
+++ b/client/main.html
@@ -13,32 +13,6 @@
   </div>
 </body>
 
-<template name="nav">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-2 mb-3">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Social Book</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-add" href="#">Add</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
-</template>
-
 <template name="main">
   <div class="row">
     {{> profile}}
@@ -46,113 +20,5 @@
 
   {{> addProf}}
   {{> viewProf}}
-</template>
-
-<template name="profile">
-  {{#each profiles}}
-  <div class="col-md-4" id="{{_id}}">
-    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-      <div class="col p-4 d-flex flex-column position-static">
-        <strong class="d-inline-block mb-2 text-primary">World</strong>
-        <h3 class="mb-0">{{fname}}</h3>
-        <div class="mb-1 text-muted">Nov 12</div>
-        <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
-          content.</p>
-        <a href="#" class="stretched-link js-view">Continue reading</a>
-      </div>
-      <div class="col-auto d-none d-lg-block profHeight">
-        <img class="w-100" src="{{picPath}}" alt="">
-        <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img"
-          aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-            dy=".3em">Thumbnail</text>
-        </svg> -->
-
-      </div>
-    </div>
-  </div>
-  {{/each}}
-</template>
-
-<template name="addProf">
-  <div class="modal" tabindex="-1" id="addModal" data-bs-backdrop="static" data-bs-keyboard="false">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div class="input-group mb-3">
-            <img class="w-50" id="displayPic" src="unisex-avatar.png" alt="">
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">Profile Picture</span>
-            <input id="profPic" type="text" class="form-control" placeholder="Paste profile picture URL"
-              aria-label="image" aria-describedby="basic-addon1">
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon2">First Name</span>
-            <input id="firstN" type="text" class="form-control" placeholder="Please enter the first name"
-              aria-label="first name" aria-describedby="basic-addon2">
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon3">Last Name</span>
-            <input id="lastN" type="text" class="form-control" placeholder="Please enter the last name"
-              aria-label="last name" aria-describedby="basic-addon3">
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon4">Age</span>
-            <input type="number" min="1" class="form-control" placeholder="Please enter the age" aria-label="last name"
-              aria-describedby="basic-addon4">
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon5">Sex</span>
-            <div class="addFormBorder">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="female">
-                <label class="form-check-label" for="flexRadioDefault1">
-                  Female
-                </label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="male" checked>
-                <label class="form-check-label" for="flexRadioDefault2">
-                  Male
-                </label>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary js-saveProfile">Add Profile</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</template>
-
-<template name="viewProf">
-  <div class="modal" tabindex="-1" id="viewModal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <input id="docId" type="hidden">
-          <p id="chkMe">Modal body text goes here.</p>
-          <p><i class="fa-solid fa-pen"></i> <i class="fa-solid fa-trash-can js-delete"></i>
-          </p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
+  {{> confirmDel}}
 </template>
