improved security; added user accounts

--- a/client/profiles/profiles.html
+++ b/client/profiles/profiles.html
@@ -4,13 +4,15 @@
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
                 <strong class="d-inline-block mb-2 text-primary">World</strong>
+                {{> starsRating rating=rating size='lg' class="js-rate" mutable=true data-id=_id}}
                 <h3 class="mb-0">{{fname}}</h3>
                 <div class="mb-1 text-muted">Nov 12</div>
                 <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
                     additional
                     content.</p>
-                <a href="#" class="stretched-link js-view">Continue reading</a>
+                <a href="#" class="js-view">Continue reading</a>
             </div>
+            {{#if currentUser}}
             <div class="col-auto d-none d-lg-block profHeight">
                 <img class="w-100" src="{{picPath}}" alt="">
                 <!-- <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img"
@@ -21,6 +23,7 @@
         </svg> -->
 
             </div>
+            {{/if}}
         </div>
     </div>
     {{/each}}
