--- a/client/navBar/navBar.html
+++ b/client/navBar/navBar.html
@@ -13,10 +13,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
+                        {{#if currentUser}}
                         <a class="nav-link js-add" href="#">Add</a>
+                        {{/if}}
                     </li>
                 </ul>
                 <form class="d-flex">
+                    {{> loginButtons}}
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
